# manifestgen

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  go.sum  main.go  run.sh
app/: converter.go  filesystem.go  generator.go  manifestgen.go
cmd/: manifestgen.go
cmd/json-to-string/: main.go
cmd/manifest-printer/: main.go
cmd/manifestgen/: main.go  main_test.go  manifestgen.go
cmd/serializer/: main.go
cmd/string-to-json/: README.md  example.sh  output.json  string-to-json.go
core/: converter.go  generator.go
internal/assert/: assert.go
internal/template/: template.go  template_test.go  testbuilder.go
pkg/: generator.go
pkg/client/: generator.go
pkg/convert/: convert.go  convert_test.go  templates.go
pkg/manifest/: manifest.go
pkg/template/: template.go  template_test.go  templates.go
project/: config.yaml  encoded  example-var.json  example-var.yaml  invalid-input  targets.tmpl
project/testdata/: template
src/: lib.rs  main.rs
testing/output/: team.json  team.yaml
testing/templates/: team.json
