[package]
name = "manifestgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"
serde_yaml = "0.8"
base64 = "0.12"